--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,11 +22,11 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install pdoc>=11.0.0
 
-      - run: pdoc --docformat google udeml/utils/ -o udeml-documentation
+      - run: pdoc --docformat google udeml/utils/ -o docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: udeml/docs
+          publish_dir: docs
