--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,11 +23,11 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ./udeml/requirements.txt
 
-      - run: pdoc --docformat google udeml/ -o docs
+      - run: pdoc --docformat google udeml/ -o documentation
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs
+          publish_dir: documentation
